--- a/MediChatstyle2.css
+++ b/MediChatstyle2.css
@@ -7,7 +7,41 @@
 body {
     font-family: 'Nobile', Helvetica, Arial, sans-serif;
     line-height: 1.6;
+    
 }
+/* ------------------------------- */
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center
+}
+
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    padding: 20px 20px;
+    color: #333;
+    text-transform: uppercase;
+    letter-spacing: .5px
+    
+    }
+
+    nav ul li a{
+         font-size: 20px;
+         line-height: 30px;
+    transition: all .2s ease-in
+
+    }
+    nav ul li a:hover{
+        
+        color:blueviolet ;
+        background: black;
+        transform: scale(1.08) rotate(-4deg);
+    
+    }
+   /*  nav end */
+    
+
 
 h1, h2 {
     font-family: 'Corben', Georgia, Times, serif;
@@ -46,7 +80,132 @@ header nav a {
 header nav a:hover {
     background-color: #555;
 }
+/* login--------------------------------- */
 
+
+
+.login{
+    width: 800px;
+   background: gray;
+   color: white;
+   margin-top: 30px;
+   border-radius: 12px;
+   padding: 30px 40px ;
+   border: 2px solid gray;
+   backdrop-filter: blur {blur(6px)};
+
+
+  
+}
+
+
+.login h1{
+   font-weight: bold;
+   font-size: 36px;
+   text-align: center;
+
+}
+.login .input-box {
+width:100% ;
+height: 50px;
+margin : 30px 0;
+background:blueviolet;
+border-radius: 40px;
+position: relative;
+
+
+}
+.input-box input{
+   width:100% ;
+   height: 100px;
+   background: transparent;
+   border: none; 
+   border: 2px  solid rgba(255, 255, 255, .2);
+   outline: none;
+   border-radius: 40px;
+   font-size: 24px;
+   color: aliceblue;
+   padding: 20px 45px 20px 20px;
+
+
+
+
+}
+.input-box input::placeholder{
+   color: whitesmoke;
+
+}
+.input-box i{
+position: absolute;
+   right: 20px;
+   top: 30px;
+   transform: translate( -50%);
+   font-size: 20px;
+}
+
+.login .remember-me{
+   display: flex;
+   justify-content: space-between;
+   font-size: 24px;
+   
+     margin-top:  80px;
+    margin-bottom:  40px
+
+}
+.remember-me label input{
+   accent-color:white;
+   margin-right: 3px;
+
+
+}
+.remember-me a{
+   color: aliceblue;
+   text-decoration: none;
+
+}
+.remember-me a:hover{
+   text-decoration: underline;
+
+}
+.login .btn{
+   width: 100% ;
+   height: 48px;
+   background: white;
+   border: 1px solid #f6f7fb;
+   border-radius: 40px;
+  
+   box-shadow:0 0 10px rgba(0,0,0 .1) ;
+   cursor: pointer;
+   font-weight: 600px;
+   color:  black;
+   font-size: 30px;
+   
+
+
+}
+.login .register-link{
+   font-size: 20px;
+   text-align: center;
+   margin: 20px 0 15px;
+
+}
+
+.register-link p a{
+   color: aliceblue;
+   text-decoration:  none;
+   font-weight: 600;
+   transition:  all .3s ease-in-out;
+   font-size: 24px;
+}
+.register-link p a:hover{
+   text-decoration: underline;
+color: black;
+
+}
+
+
+
+/* ------------- login end here------------------------- */
 main {
     padding: 2rem;
 }
