--- a/MediChatstyle2.css
+++ b/MediChatstyle2.css
@@ -45,12 +45,12 @@ nav ul li{
 
 h1, h2 {
     font-family: 'Corben', Georgia, Times, serif;
-    font-weight: bold;
+    font-weight: light;
     margin-bottom: 1rem;
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 600px;
     margin: 0 auto;
     padding: 2rem;
 }
